--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Francesco Biondi - Music composer, songwriter and producer</title>
     <meta name="description" content="Francesco Biondi is a highly accomplished composer, songwriter, and producer based in Rome, Italy. With almost 15 years of experience creating music for a wide range of projects, including films, TV shows, commercials, video games, and documentaries.">
+    <link rel="icon" type="image/svg+xml" href="https://pub-2da555791ab446dd9afa8c2352f4f9ea.r2.dev/media/favicon-francesco-biondi-music.svg">
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -42,10 +43,8 @@
   }
 }
 </script>
-<link rel="stylesheet" href="/index.css">
 </head>
   <body>
     <div id="root"></div>
-  <script type="module" src="/index.tsx"></script>
-</body>
+  </body>
 </html>
