Add: SEO meta tags, social icons and free cookie consent

--- a/index.html
+++ b/index.html
@@ -64,10 +64,12 @@
   }
 }
 </script>
+<link rel="stylesheet" href="/index.css">
 </head>
   <body>
     <div id="root"></div>
     <!-- CookieConsent v3 JS -->
     <script src="https://cdn.jsdelivr.net/gh/orestbida/cookieconsent@v3.0.1/dist/cookieconsent.umd.js"></script>
-  </body>
+  <script type="module" src="/index.tsx"></script>
+</body>
 </html>
